--- a/_posts/2014-04-27-PythagoreanPennants.html
+++ b/_posts/2014-04-27-PythagoreanPennants.html
@@ -37,6 +37,7 @@ category: highlighted
 				</div>
 				
 				<footer class="row">
+					<h4>Footnotes</h4>
 					<ol class="col-5">
 						<li id="footnote_1">
 							Because the sample size in the NFL - 16 games - is so small. <a href="#footnotelink_1">^</a>
@@ -53,6 +54,7 @@ category: highlighted
 		</div>
 		<div class="row">
 			<section class="col-3 ">
+				<h4>About the Graphic</h4>
 				<p>I learned about the Pythagorean Expectation by reading <a href="https://twitter.com/billbarnwell">Bill Barnwell</a>'s work on <a href="http://grantland.com/contributors/bill-barnwell/">Grantland</a>. It made being a fan of the football team in our nations capitol even more frustrating but provided insight into teams performance from year to year that I really have enjoyed having. I wanted to</p>
 			</section>
 			<section class="col-2">
