Styled the Writing page, fixed a lot of other small things

--- a/_posts/2014-04-27-PythagoreanPennants.html
+++ b/_posts/2014-04-27-PythagoreanPennants.html
@@ -1,7 +1,8 @@
 ---
 layout: empty
 title: Pythagorean Pennants
-subtitle: Repurposing the pennant on your wall to tell your favorite team's future
+description: Repurposing the pennant on your wall to tell your favorite team's future
+listBackground: /content/pythagoreanPennants.png 
 category: highlighted
 ---
 
@@ -35,30 +36,29 @@ category: highlighted
 				</p>
 				<div id="parallelCoordinates">
 				</div>
-				
-				<footer class="row">
-					<h4>Footnotes</h4>
-					<ol class="col-5">
-						<li id="footnote_1">
-							Because the sample size in the NFL - 16 games - is so small. <a href="#footnotelink_1">^</a>
-						</li>
-						<li id="footnote_2">
-							It is named the Pythagorean Expectation because the formula looks a lot like the one you learned in middle school. It was invented by Bill James and applied first to baseball and has since moved to other sports with slightly different formulas. Learn more about the <a href="http://en.wikipedia.org/wiki/Pythagorean_expectation">Pythagorean Expectation</a>. <a href="#footnotelink_2">^</a>
-						</li>
-						<li id="footnote_3">
-							It doesn't take into account things like player movement. So while the 2011 Broncos should have not won quite as many games the following seasons adding Payton Manning is clearly a difference maker. <a href="#footnotelink_3">^</a>
-						</li>
-					</ol>
-				</footer>
 			</article>
 		</div>
-		<div class="row">
-			<section class="col-3 ">
-				<h4>About the Graphic</h4>
-				<p>I learned about the Pythagorean Expectation by reading <a href="https://twitter.com/billbarnwell">Bill Barnwell</a>'s work on <a href="http://grantland.com/contributors/bill-barnwell/">Grantland</a>. It made being a fan of the football team in our nations capitol even more frustrating but provided insight into teams performance from year to year that I really have enjoyed having. I wanted to</p>
+		<div class="row articleFooter">
+			<section class="col-5">
+				<h4 class="articleFooter--Header">Footnotes</h4>
+				<ol class="col-5 footnotes">
+					<li class="footnote" id="footnote_1">
+						Because the sample size in the NFL - 16 games - is so small. <a href="#footnotelink_1">^</a>
+					</li>
+					<li class="footnote" id="footnote_2">
+						It is named the Pythagorean Expectation because the formula looks a lot like the one you learned in middle school. It was invented by Bill James and applied first to baseball and has since moved to other sports with slightly different formulas. Learn more about the <a href="http://en.wikipedia.org/wiki/Pythagorean_expectation">Pythagorean Expectation</a>. <a href="#footnotelink_2">^</a>
+					</li>
+					<li class="footnote" id="footnote_3">
+						It doesn't take into account things like player movement. So while the 2011 Broncos should have not won quite as many games the following seasons adding Payton Manning is clearly a difference maker. <a href="#footnotelink_3">^</a>
+					</li>
+				</ol>
 			</section>
 			<section class="col-2">
-				<h4>References</h4>
+				<h4 class="articleFooter--Header">About the Graphic</h4>
+				<p>I learned about the Pythagorean Expectation by reading <a href="https://twitter.com/billbarnwell">Bill Barnwell</a>'s work on <a href="http://grantland.com/contributors/bill-barnwell/">Grantland</a>. It made being a fan of the football team in our nations capitol even more frustrating but provided insight into teams performance from year to year that I really have enjoyed having. I wanted to</p>
+			</section>
+			<section class="col-3">
+				<h4 class="articleFooter--Header">References</h4>
 				<ul>
 					<li>Data is from <a href="http://www.pro-football-reference.com">Pro-Football Reference</a> and is available as a <a href="https://docs.google.com/spreadsheets/d/1XkJxHtFrhZOgBjxJXMIejxepBolQhBO_KXgtbAGcHhE/pubhtml">google doc</a>.</li>
 					<li>The charts were built using <a href="http://d3js.org">d3.js</a> and specifically <a href="http://bl.ocks.org/mbostock/3884955">these</a> <a href="http://bl.ocks.org/mbostock/1166403">three</a> <a href="http://bl.ocks.org/mbostock/8027637">examples</a>.</li>
