--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@ title: TMI, Seth
 
 	<h1 class="aboutHeader masthead">Seth Blanchard</h1>
 	<article class="col-3 small-col-4">
-		<img src="content/Family.jpg" />
+		<img src="content/FamilyPub.jpg" />
 		<h2 class="pHeader first-Header">
 			In the Abstract
 		</h2>
