--- a/writing.html
+++ b/writing.html
@@ -1,21 +1,17 @@
 ---
 layout: master
-title: Articles, Visualizations, Writing - Code or English
+title: Code and Sometimes English
 ---
 
   <h1 class="masthead">Writing</h1>
   <h2 class="byline">Articles, Visualizations, Writing - Code or English</h2>
-  <ul class="posts">
-    {% for post in site.posts %}
-      <li>
-      	<a href="{{ post.url }}">
-      	<h3>{{ post.title }}</h3>
-      	<h4>{{ post.subtitle }}</h4>
-      	</a>
-      </li>
-    {% endfor %}
-  </ul>
-
-<div class="row">
-<blockquote>I'm just getting started</blockquote>
-</div>
+    <ul class="writinglist">
+      {% for post in site.posts %}
+        <li class="articleItem">
+        	<a  class="articleItem--Link"  href="{{ post.url }}" {% if post.listBackground != blank %} style="background-image:url('{{post.listBackground}}');" {% endif %} >
+        	<h3 class="articleItem--Link--Title" >{{ post.title }}</h3>
+        	<p class="articleItem--Link--Description" >{{ post.description }}</p>
+        	</a>
+        </li>
+      {% endfor %}
+    </ul>
