Cleaned up the about page. Fixed some mobile styles. finalized some styles

--- a/about.html
+++ b/about.html
@@ -10,20 +10,14 @@ title: TMI, Seth
 			In the Abstract
 		</h2>
 		<p>
-			I am an enthusastic Husband, Father, Friend and Hokie. When not involved with the previous list, I enjoy rennovating my house, listening to music, making websites, visualizing sports and decreasingly, doing dangerous things out of doors.
+			I am an enthusiastic husband, father, friend and Hokie. I enjoy renovating my house, listening to music, making websites, visualizing sports and decreasingly, doing dangerous things outdoors.
 		</p>
-		<h3 class="pHeader">Exploration</h3>
+		<h3 class="pHeader">Malleable</h3>
 		<p> 
-			I love that moment - when you are wholly present. When your mind lets go of everything outside of your breath and what your eyes take in. That. Exact. Instant. I used to find that moment mostly high above the ground on rock faces. I've found it in foreign contries, in the head waters of the amazon or the cold rain of Patigonia. Recently I find it learning new things in my work and most frequently with my wife and our two small children. 
+			I've taken many shapes in my life and career: Mathematician (never seriously), Programmer, Automation Specialist, Climber, Missionary, User Experience Designer, Carpenter, Visualization Specialist, Teacher. I love finding new forms. Stretching for understanding, settling into new molds, always growing, never still.
 		</p>
 		<p>
-			All these things really are ways of explorating. Getting to know a knew land, country, language or food. Finding the edges of your knowldege, physical strength or your humanity experiance.</p>
-		<p> 
-			I always want to be exploring. Finding that moment. Wholly present.
-		</p>
-		<h3 class="pHeader">Translation</h3>
-		<p>
-			I wouldn't ask me to translate from English to Spanish (or Aymara). But, I'm really good at translation. Translating client requirements into impactful websites. Advanced sports metrics into easily digestable charts.Or my daughters instructions into a Duplo robot. These sorts of tasks are where I really thrive - and where I find that moment.
+			Even while changing form into a new discipline, the imprints of the earlier roles never fade. These imprints inform your new work while helping you relate to those in positions you previously held. 
 		</p>
 	</article>
 	<aside class="col-2 no-padding abtAside small-col-4">
@@ -37,19 +31,19 @@ title: TMI, Seth
 			</div>
 			<div class="abtAside--eslwhere hide-small">
 				<h2 class="pHeader abtAside--Header">Elsewhere</h2>
-				<a href="twitter" class="abtAside--eslwhere--link">
+				<a href="https://twitter.com/sethblanchard" class="abtAside--eslwhere--link">
 					Twitter 
 					<span class="abtAside--eslwhere--link--activity">Always</span>
 				</a>
-				<a href="soundcloud" class="abtAside--eslwhere--link">
+				<a href="https://soundcloud.com//sethblanchard" class="abtAside--eslwhere--link">
 					Soundcloud 
 					<span class="abtAside--eslwhere--link--activity">Often</span>
 				</a>
-				<a href="linkedin" class="abtAside--eslwhere--link">
+				<a href="http://www.linkedin.com/in/sethablanchard" class="abtAside--eslwhere--link">
 					LinkedIn 
 					<span class="abtAside--eslwhere--link--activity">Seledom</span>
 				</a>
-				<a href="github" class="abtAside--eslwhere--link">
+				<a href="https://github.com/sethblanchard" class="abtAside--eslwhere--link">
 					Github 
 					<span class="abtAside--eslwhere--link--activity">Fitz and Starts</span>
 				</a>
